use release version as package version